Fix spacing for rgbVals

--- a/public/colorGame.css
+++ b/public/colorGame.css
@@ -44,16 +44,26 @@
 
 #letterR {
   color: red;
-  margin-right: 10%;
 }
 
 #letterG {
   color: green;
   margin-right: 10%;
-
 }
 
 #letterB {
   color: blue;
+  margin-right: 10%;
+}
+
+#rVal {
+  margin-right: 10%;
+}
+
+#gVal {
+  margin-right: 10%;
+}
+
+#bVal {
   margin-right: 10%;
 }
